# clone-ebook

./: .gitignore  README.md  main.py  pyproject.toml
clone_ebook/: __init__.py  clone_ebook.py
clone_ebook/screen/: screen_coordinates.py
